--- a/.tekton/clamav-scan-v02-push.yaml
+++ b/.tekton/clamav-scan-v02-push.yaml
@@ -205,7 +205,7 @@ spec:
         - name: name
           value: tkn-bundle-oci-ta
         - name: bundle
-          value: quay.io/konflux-ci/tekton-catalog/task-tkn-bundle-oci-ta:0.2@sha256:43e20b7e039152dc08acf00fa60c15f36be238fd5c5e0830ef6e53c339c13b78
+          value: quay.io/hongweiliu/task-tkn-bundle-oci-ta@sha256:df94ed8b84be830c5e24b5a61178bbdef23c92f39fa3f956b81ea249c575beac
         - name: kind
           value: task
         resolver: bundles
